@@ -16,80 +16,6 @@
 #include "tools.h"
 #include "polldaemon.h"
 #include "lvm2cmdline.h"
-#include <signal.h>
-#include <sys/wait.h>
-
-static void _sigchld_handler(int sig __attribute__((unused)))
-{
-	while (wait4(-1, NULL, WNOHANG | WUNTRACED, NULL) > 0) ;
-}
-
-/*
- * returns:
- * -1 if the fork failed
- *  0 if the parent
- *  1 if the child
- */
-static int _become_daemon(struct cmd_context *cmd)
-{
-	static const char devnull[] = "/dev/null";
-	int null_fd;
-	pid_t pid;
-	struct sigaction act = {
-		{_sigchld_handler},
-		.sa_flags = SA_NOCLDSTOP,
-	};
-
-	log_verbose("Forking background process");
-
-	sigaction(SIGCHLD, &act, NULL);
-
-	sync_local_dev_names(cmd); /* Flush ops and reset dm cookie */
-
-	if ((pid = fork()) == -1) {
-		log_error("fork failed: %s", strerror(errno));
-		return -1;
-	}
-
-	/* Parent */
-	if (pid > 0)
-		return 0;
-
-	/* Child */
-	if (setsid() == -1)
-		log_error("Background process failed to setsid: %s",
-			  strerror(errno));
-
-	/* For poll debugging it's best to disable for compilation */
-#if 1
-	if ((null_fd = open(devnull, O_RDWR)) == -1) {
-		log_sys_error("open", devnull);
-		_exit(ECMD_FAILED);
-	}
-
-	if ((dup2(null_fd, STDIN_FILENO) < 0)  || /* reopen stdin */
-	    (dup2(null_fd, STDOUT_FILENO) < 0) || /* reopen stdout */
-	    (dup2(null_fd, STDERR_FILENO) < 0)) { /* reopen stderr */
-		log_sys_error("dup2", "redirect");
-		(void) close(null_fd);
-		_exit(ECMD_FAILED);
-	}
-
-	if (null_fd > STDERR_FILENO)
-		(void) close(null_fd);
-
-	init_verbose(VERBOSE_BASE_LEVEL);
-#endif
-	strncpy(*cmd->argv, "(lvm2)", strlen(*cmd->argv));
-
-	reset_locking();
-	if (!lvmcache_init())
-		/* FIXME Clean up properly here */
-		_exit(ECMD_FAILED);
-	dev_close_all();
-
-	return 1;
-}
 
 progress_t poll_mirror_progress(struct cmd_context *cmd,
 				struct logical_volume *lv, const char *name,
@@ -340,7 +266,7 @@ int poll_daemon(struct cmd_context *cmd, const char *name, const char *uuid,
 	}
 
 	if (parms.background) {
-		daemon_mode = _become_daemon(cmd);
+		daemon_mode = become_daemon(cmd, 0);
 		if (daemon_mode == 0)
 			return ECMD_PROCESSED;	    /* Parent */
 		else if (daemon_mode == 1)
